<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_stand_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/stand_jump"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <!--<TextView-->
    <!--andridd:id_id@+id/tv_ropeSelect_time"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below_id@+id/tv_itemName"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:padding="5dp"-->
    <!--/>-->
    <TextClock
        android:id="@+id/tv_jump_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_stand_jump"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:format12Hour="yyyy-MM-dd hh:mm:ss"
        android:format24Hour="yyyy-MM-dd kk:mm:ss"
        android:padding="5dp"/>
    <!--android:background="@drawable/circle_corner_button_selector"-->

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/tv_jump_current_time"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_start_test"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_corner_button_selector"
                android:text="@string/start_test"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_system_setting"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_corner_button_selector"
                android:text="@string/system_setting"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_data_manage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_corner_button_selector"
                android:text="@string/data_manage"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <include layout="@layout/layout_bottom_led_about"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
