<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <SurfaceView
            android:id="@+id/sv_discern"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_portrait"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_head_portrait" />

        <TextView
            android:id="@+id/txt_stu_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="10dp"
            android:text="@string/studentCode" />

        <TextView
            android:id="@+id/txt_stu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="5dp"
            android:text="@string/studentName" />

        <TextView
            android:id="@+id/txt_stu_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="5dp"
            android:text="@string/grades" />

        <LinearLayout
            android:id="@+id/view_stu_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_Portrait" />

            <ImageView
                android:id="@+id/img_stu_portrait"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/default_head_portrait" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:drawableTop="@mipmap/ic_launcher"
                android:text="项目设置" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_view_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.feipulai.host.view.StuSearchEditText
                android:id="@+id/et_select"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/edit_search_bg"
                android:cursorVisible="true"
                android:digits="0123456789X"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/icon_search"
                android:gravity="center"
                android:hint="请输入考号或者刷身份证"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:textCursorDrawable="@drawable/cursor_color" />

            <ImageView
                android:id="@+id/btn_code"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/scan"
                android:scaleType="fitXY" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_stu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_bottom"
            android:layout_below="@+id/linear_view_select"
            android:layout_margin="10dp" />


        <LinearLayout
            android:id="@+id/view_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="设备状态" />

                <TextView
                    android:id="@+id/txt_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="A组" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/shape_round_textview_red"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="连接中断" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/shape_round_textview_yellow"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="电量低" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/shape_round_textview_grey"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="暂停使用" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_botton"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:overScrollMode="never"
                android:paddingTop="10dp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>